--- a/coding_test/dp_commute.ipynb
+++ b/coding_test/dp_commute.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 286,
    "id": "e0545539",
    "metadata": {},
    "outputs": [],
@@ -44,22 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 287,
    "id": "22c030b0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-185-053ba19d3116>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-184-d07eea951971>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(m, n, puddles)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mcommuteList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mcommuteList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpuddleList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpuddles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommuteList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mcommuteList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfindWay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcommuteList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcommuteList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m1000000007\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-184-d07eea951971>\u001b[0m in \u001b[0;36mfindWay\u001b[0;34m(m, n, commuteList)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mcommuteList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m                 \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcommuteList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -217,31 +214,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "id": "14c3f7aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 구글링 결과\n",
-    "\n",
     "def solution(m, n, puddles):\n",
     "    answer = 0\n",
     "    graph = [[0]*(m+1) for i in range(n+1)]\n",
     "    \n",
     "    for i in range(1,n+1):\n",
     "        for j in range(1,m+1):\n",
-    "            if i==1 and j==1: #(1,1)은 1으로 초기화\n",
+    "            if i==1 and j==1: # 집은 1로 초기화\n",
     "                graph[1][1]=1\n",
-    "            elif [j,i] not in puddles: # 물웅덩이가 아닌경우\n",
-    "                graph[i][j] = graph[i-1][j]+graph[i][j-1]      \n",
-    "                \n",
+    "            elif [j,i] not in puddles: # 물웅덩이가 아니면\n",
+    "                graph[i][j] = graph[i-1][j]+graph[i][j-1]    \n",
     "    return graph[n][m]%1000000007"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
    "id": "bdcc55d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am i :  1\n",
+      "I am j :  2\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  1\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  1\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  1\n",
+      "I am j :  5\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  2\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 0]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  5\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  1\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  2\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 1, 0, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 1, 3, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 1, 3, 6, 0]\n",
+      "I am i :  3\n",
+      "I am j :  5\n",
+      "[0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 2, 3, 4]\n",
+      "[0, 0, 1, 3, 6, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(5,3,[[1,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "id": "ca04dfbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am i :  1\n",
+      "I am j :  2\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  1\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  1\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  1\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  2\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 2]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  1\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 2]\n",
+      "[0, 1, 0, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  2\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 2]\n",
+      "[0, 1, 1, 0, 0]\n",
+      "I am i :  3\n",
+      "I am j :  3\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 2]\n",
+      "[0, 1, 1, 2, 0]\n",
+      "I am i :  3\n",
+      "I am j :  4\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 2]\n",
+      "[0, 1, 1, 2, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(4,3,[[2, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a25287a1",
    "metadata": {},
    "outputs": [],
    "source": []
