--- a/coding_test/heap_scoville.ipynb
+++ b/coding_test/heap_scoville.ipynb
@@ -2,50 +2,111 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 120,
    "id": "5af569a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "\n",
-    "def makeScov(a,b):\n",
-    "    scov = a + b*2\n",
-    "    return scov\n",
-    "\n",
     "def solution(scoville, K):\n",
-    "    scoville = heapq.heapify(scoville)\n",
     "    answer = 0\n",
+    "    heapq.heapify(scoville)\n",
+    "    \n",
+    "    while scoville[0] < K:\n",
+    "        if len(scoville) == 1:\n",
+    "            return -1\n",
+    "        heapq.heappush(scoville,heapq.heappop(scoville)+heapq.heappop(scoville)*2)\n",
+    "        answer += 1\n",
+    "        \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "id": "90fd765c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'heapify'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-a00fa0cf9ec1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-47c721990e1e>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(scoville, K)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoville\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mheap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscoville\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheapify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0manswer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'heapify'"
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([1, 2, 3, 9, 10, 12], 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "efc2d464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 4, 8, 7]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "4df83f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 4), (7, 7), (5, 5), (8, 8), (7, 7)]\n",
+      "[(7, 7), (7, 7), (8, 8), (14, 14)]\n"
      ]
     }
    ],
    "source": [
-    "solution([1, 2, 3, 9, 10, 12],7)"
+    "#힙을 통한 우선순위 큐 구현 (min-heap)\n",
+    "\n",
+    "#maxHeap\n",
+    "import heapq\n",
+    "\n",
+    "nums = [4, 1, 7, 3, 8, 5]\n",
+    "heap = []\n",
+    "\n",
+    "for num in nums:\n",
+    "    heapq.heappush(heap, (num, num))  # (우선 순위, 값)\n",
+    "    \n",
+    "\n",
+    "while min(heap)[0] < 7:\n",
+    "    a = heapq.heappop(heap)[1]\n",
+    "    b = heapq.heappop(heap)[1]*2\n",
+    "    heapq.heappush(heap, (a+b, a+b)) \n",
+    "#     heapq.heappush(heap,  a+b )\n",
+    "    print(heap)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc2d464",
+   "id": "7a0fa208",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8490209",
    "metadata": {},
    "outputs": [],
    "source": []
