--- a/coding_test/dijkstra.ipynb
+++ b/coding_test/dijkstra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "df964987",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "7ad5d3ed",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,10 @@
    "id": "9fc7ad69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def selfDijkstra(graph, start):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
