--- a/coding_test/dijkstra_zelda.ipynb
+++ b/coding_test/dijkstra_zelda.ipynb
@@ -166,29 +166,25 @@
     "            if n > j+1 >= 0 :\n",
     "                graph[(i,j)][(i,j+1)] = zeldaList[i][j+1]\n",
     "                \n",
-    "#     for i in graph.items():\n",
-    "#         print(i)\n",
-    "#     print(graph)\n",
     "    return graph\n",
     "            \n",
     "    \n",
-    "def dijkstra(graph, start):\n",
-    "    distances = {node: float('inf') for node in graph}  # start로 부터의 거리 값을 저장하기 위함\n",
-    "    distances[start] = graph[(0,0)]  # 시작 값은 0이어야 함\n",
+    "def dijkstra(graph, start, startNum):\n",
+    "    distances = {node: float('inf') for node in graph} \n",
+    "    distances[start] = startNum\n",
     "    queue = []\n",
-    "    heapq.heappush(queue, (distances[start], start))  # 시작 노드부터 탐색 시작 하기 위함.\n",
+    "    heapq.heappush(queue, (distances[start], start))\n",
     "\n",
-    "    while queue:  # queue에 남아 있는 노드가 없으면 끝\n",
-    "        current_distance, current_destination = heapq.heappop(queue)  # 탐색 할 노드, 거리를 가져옴.\n",
-    "        if distances[current_destination] < current_distance:  # 기존에 있는 거리보다 길다면, 볼 필요도 없음\n",
+    "    while queue:\n",
+    "        current_distance, current_destination = heapq.heappop(queue)\n",
+    "        if distances[current_destination] < current_distance:\n",
     "            continue\n",
     "\n",
     "        for new_destination, new_distance in graph[current_destination].items():\n",
-    "            distance = current_distance + new_distance  # 해당 노드를 거쳐 갈 때 거리\n",
-    "            if distance < distances[new_destination]:  # 알고 있는 거리 보다 작으면 갱신\n",
+    "            distance = current_distance + new_distance \n",
+    "            if distance < distances[new_destination]:\n",
     "                distances[new_destination] = distance\n",
-    "                heapq.heappush(queue, [distance, new_destination])  # 다음 인접 거리를 계산 하기 위해 큐에 삽입\n",
-    "#     print(distances)\n",
+    "                heapq.heappush(queue, [distance, new_destination])\n",
     "    return distances\n",
     "\n",
     "n = 1\n",
@@ -203,8 +199,8 @@
     "    for i in range(n):\n",
     "        rupee.append(list(map(int,input().split())))\n",
     "    graph = makeZeldaGraph(rupee,n)\n",
-    "    minCost = dijkstra(graph,(0,0))[n-1,n-1]\n",
-    "    print(f\"Problem {count}: {minCost}\")\n"
+    "    minCost = dijkstra(graph,(0,0),rupee[0][0])[n-1,n-1]\n",
+    "    print(f\"Problem {count}: {minCost}\")"
    ]
   },
   {
